--- a/session3_stats_reorganisation/materiel/Devoir_seance3.Rmd
+++ b/session3_stats_reorganisation/materiel/Devoir_seance3.Rmd
@@ -32,10 +32,18 @@ Ceci est la partie correspondant à la séance 3 du contrôle continu qui combin
 
 <br>
 
-- Select
+- Avec l'une des fonctions que nous avons vu dans la deuxième partie du cours, selectionnez toutes les colonnes de l'objet `flowering_data` sauf la colonne `Plant`.
 
+<br>
 
-- Filter
+- Avec une autre fonction que nous avons vu dans la deuxième partie du cours, gardez uniquement les lignes de l'objet `flowering_data` qui sont du `Genotype` `Ler`.
+
+<br>
+
+**C'est fini. N'oubliez pas de sauver votre fichier. Le script contenant tous les exercices à faire entre les séances 1, 2 et 3 est la première moitié du contrôle continue et doit être déposé sur Moodle au plus tard le xxx.**
+
+<br>
+
 
 
 
