--- a/session2_ggplot/materiel/ggplot_session.Rmd
+++ b/session2_ggplot/materiel/ggplot_session.Rmd
@@ -586,14 +586,7 @@ pour faire des graphiques "ridge"
 
 A partir ce ce que nous avons vu aujourd'hui:
 
-- Testez différents types de graphiques en utilisant ggplot sur l'un de vos jeux de données
-- Si vous n'avez jamais utilisé `tidyverse` sur R sur votre ordinateur, vous aurez besoin de l'installer avant de le charger dans R. Pour cela utilisez la commande suivante:
-
-```{r eval = FALSE}
-install.packages("tidyverse")
-```
-
-*Pour ceux qui n'ont pas de données, vous pouvez utiliser le tableau _Pan_Rui_2017_flowering time_raw_data.txt_ ([publié par Pan et Rui](https://doi.org/10.6084/m9.figshare.5675032.v1)) dans le dossier _data_ *
+- Continuez le contrôle continu dont les instructions sont [ici](Devoir_seance2.html)
 
 ******
 
