--- a/session3_stats_reorganisation/materiel/reorganisation_donnees.Rmd
+++ b/session3_stats_reorganisation/materiel/reorganisation_donnees.Rmd
@@ -207,15 +207,15 @@ write_tsv(expt1.days.to.flower.clean, file = "../data/expt1_days_to_flower_clean
 
 ******
   
+  
 #   <span style="color: blue;">A faire pour la prochaine séance </span>
 
 A partir ce ce que nous avons vu aujourd'hui:
 
-- Utilisez `filter` et `select` pour sélectionner vos données. Est-ce que cela vous permet de faire de nouveaux graphiques qui n'étaient pas possibles sur les données non sélectionnées?
+- Finissez le contrôle continu dont les instructions sont [ici](Devoir_seance3.html)
 
-- N'oubliez pas d'utiliser des pipes (` %>% `) pour faire des chaines de commandes si vous utilisez plus d'une fonction sur vos données
+- Déposez avant le xxx sur Moodle le script R résultat dans la première moitié du contrôle continue incluant les instructions à la fin des séances 1, 2 et 3.
 
-*Pour ceux qui n'ont pas de données, vous pouvez utiliser le tableau _Pan_Rui_2017_flowering time_raw_data.txt_ ([publié par Pan et Rui](https://doi.org/10.6084/m9.figshare.5675032.v1)) dans le dossier _data_ *
 
 ******
 
