--- a/session3_stats_reorganisation/materiel/reorganisation_donnees.Rmd
+++ b/session3_stats_reorganisation/materiel/reorganisation_donnees.Rmd
@@ -214,7 +214,7 @@ A partir ce ce que nous avons vu aujourd'hui:
 
 - Finissez le contrôle continu dont les instructions sont [ici](Devoir_seance3.html)
 
-- Déposez avant le xxx sur Moodle le script R résultat dans la première moitié du contrôle continue incluant les instructions à la fin des séances 1, 2 et 3.
+- Déposez avant le xxx sur Moodle le script R de la première moitié du contrôle continu résultats des instructions à la fin des séances 1, 2 et 3.
 
 
 ******
