--- a/session3_stats_reorganisation/materiel/Devoir_seance3.Rmd
+++ b/session3_stats_reorganisation/materiel/Devoir_seance3.Rmd
@@ -40,7 +40,7 @@ Ceci est la partie correspondant à la séance 3 du contrôle continu qui combin
 
 <br>
 
-**C'est fini. N'oubliez pas de sauver votre fichier. Le script contenant tous les exercices à faire entre les séances 1, 2 et 3 est la première moitié du contrôle continu et doit être déposé sur Moodle au plus tard le xxx.**
+**C'est fini. N'oubliez pas de sauver votre fichier. Le script contenant tous les exercices à faire entre les séances 1, 2 et 3 est la première moitié du contrôle continu et doit être déposé sur Moodle au plus tard le 09/11/2022 à minuit.**
 
 <br>
 
