--- a/session3_stats_reorganisation/materiel/Devoir_seance3.Rmd
+++ b/session3_stats_reorganisation/materiel/Devoir_seance3.Rmd
@@ -28,19 +28,21 @@ Ceci est la partie correspondant à la séance 3 du contrôle continu qui combin
 
 <br>
 
-- Ajoutez au boxplot (qui est à la fin de votre script) le résultat d'un test de comparaison de moyennes entre les deux traitements. Formulez une interprêtation à propos de l'effet du champignon *Piriformospora indica* sur le temps de floraison d'Arabidopsis.
+- Ajoutez au boxplot (qui est à la fin de votre script) le résultat d'un test de comparaison de moyennes entre les deux niveaux d'azote pour chacune des accessions. 
+*Aide: pour faciliter la lecture du résultat du test, utiliez `label = "p.signif"` afin de ne faire apparaitre que les étoiles de significativité du test pour chaque accession.* 
+Formulez une interprétation à propos de l'effet du la concentration en azote sur le poids des plantes d'Arabidopsis.
 
 <br>
 
-- Avec l'une des fonctions que nous avons vue dans la deuxième partie du cours, selectionnez toutes les colonnes de l'objet `flowering_data` sauf la colonne `Plant`.
+- Avec l'une des fonctions que nous avons vue dans la deuxième partie du cours, selectionnez toutes les colonnes de l'objet `nitrate_data` sauf la colonne `Nlevel`.
 
 <br>
 
-- Avec une autre fonction que nous avons vue dans la deuxième partie du cours, gardez uniquement les lignes de l'objet `flowering_data` qui sont du `Genotype` `Ler`.
+- Avec une autre fonction que nous avons vue dans la deuxième partie du cours, gardez uniquement les lignes de l'objet `nitrate_data` qui sont l'accession `Col-0`.
 
 <br>
 
-**C'est fini. N'oubliez pas de sauver votre fichier. Le script contenant tous les exercices à faire entre les séances 1, 2 et 3 est la première moitié du contrôle continu et doit être déposé sur Moodle au plus tard le 09/11/2022 à minuit.**
+- **C'est fini. N'oubliez pas de sauver votre fichier. Le script contenant tous les exercices à faire entre les séances 1, 2 et 3 est la première moitié du contrôle continu et doit être déposé sur Moodle au plus tard le 09/11/2022 à minuit.**
 
 <br>
 
