--- a/session4_reorganisation_suite/materiel/reorganisation_suite.Rmd
+++ b/session4_reorganisation_suite/materiel/reorganisation_suite.Rmd
@@ -283,15 +283,10 @@ colnames(expt1.separated)
   
 ##   <span style="color: blue;">A faire pour la prochaine séance </span>
 
-A partir ce ce que nous avons vu aujourd'hui:
+#### A partir ce ce que nous avons vu aujourd'hui:
 
-- Utilisez `mutate`,  `gather` ou `spread` pour reformater vos données. Est-ce que cela vous permet de faire de nouveaux graphiques qui n'étaient pas possibles sur les données non reformatées?
+#### - Commenxez la deuxième moitié du contrôle continu dont les instructions sont [ici](Devoir_seance4.html)
 
-- Utiliser une ou plusieurs fonctions de la famille `*_join()` pour combiner des tableaux ensemble. Est-ce que cela vous permet de faire de nouveaux graphiques qui n'étaient pas possibles sans combiner les tableaux?
-
-- N'oubliez pas d'utiliser des pipes (` %>% `) pour faire des chaines de commandes si vous utilisez plus d'une fonction sur vos données
-
-*Pour ceux qui n'ont pas de données, vous pouvez utiliser le tableau _Pan_Rui_2017_flowering time_raw_data.txt_ ([publié par Pan et Rui](https://doi.org/10.6084/m9.figshare.5675032.v1)) dans le dossier _data_ *
 
 ******
 
