--- a/session3_stats_reorganisation/materiel/reorganisation_donnees.Rmd
+++ b/session3_stats_reorganisation/materiel/reorganisation_donnees.Rmd
@@ -208,7 +208,7 @@ write_tsv(expt1.days.to.flower.clean, file = "../data/expt1_days_to_flower_clean
 ******
   
   
-#   <span style="color: blue;">A faire pour la prochaine séance </span>
+#   <span style="color: blue;">Contrôle continu à faire pour la prochaine séance </span>
 
 #### A partir ce ce que nous avons vu aujourd'hui:
 
