--- a/session4_reorganisation_suite/materiel/reorganisation_suite.Rmd
+++ b/session4_reorganisation_suite/materiel/reorganisation_suite.Rmd
@@ -281,7 +281,7 @@ colnames(expt1.separated)
 
 ******
   
-##   <span style="color: blue;">A faire pour la prochaine séance </span>
+#   <span style="color: blue;">Contrôle continu à faire pour la prochaine séance </span>
 
 #### A partir ce ce que nous avons vu aujourd'hui:
 
